--- a/front-webApp/assignment.html
+++ b/front-webApp/assignment.html
@@ -8,19 +8,17 @@
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
-<!-- 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">  -->
-
-
-
 	<!-- Customize CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style_assignment.css">
-	
+
+	<!-- fontawesome 으로 icon 사용하기 -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 </head>
 
 <body class="text-center">
@@ -62,58 +60,54 @@
 					<!-- 과제전체 보여주는 영역 -->
 					<div style="overflow:auto; width:auto; height:300px;" class="mt-3 assignment-all scrollbar scrollbar-track scrollbar-thumb" data-offset="0">
 
+						<div class="px-2">
+							<!-- Button trigger modal -->
+							<button type="button" class="btn btn-lg btn-block btn-outline-danger " data-toggle="modal" data-target="#exampleModal">
+								<h6 id="one" style="font-weight: bold" class="mb-2">-과제 제목</h6>
+								<p6>text</p6>	
+							</button>
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
+							<!-- Modal -->
+							<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+								<div class="modal-dialog modal-dialog-centered modal-sm" role="document">
+									<div class="modal-content">
+										<div class="modal-header">
+											<h5 class="modal-title" id="exampleModalLabel">과제 제목</h5>
+											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+												<span aria-hidden="true">&times;</span>
+											</button>
+										</div>
+										<div class="modal-body">
+											...
+										</div>
+										<div class="modal-footer">
+											<button type="button" class="btn btn-sm btn-primary" data-dismiss="modal">Close</button>
+											<a class="btn btn-sm btn-primary " aria-label="Left Align" href="assignment_add.html">Change</a>
+											<button type="button" class="btn btn-sm btn-danger" data-dismiss="modal">Delete</button>
+										</div>
+									</div>
+								</div>
+							</div>
 
 
-						<div class=" assign-each">
-							<h6 id="two" style="font-weight: bold" class="mb-2">-assignment2</h6>
-							<p6>text</p6>								
+							<div class=" assign-each">
+								<h6 id="two" style="font-weight: bold" class="mb-2">-assignment2</h6>
+								<p6>text</p6>								
+							</div>
+							<div class="assign-each">
+								<h6 id="three" style="font-weight: bold" class="mb-2">-assignment3</h6>
+								<p6>text</p6>						
+							</div>
+							<div class="assign-each">
+								<h6 id="four" style="font-weight: bold" class="mb-2">-assignment4</h6>
+								<p6>text</p6>								
+							</div>
+							<div class="assign-each">
+								<h6 id="five" style="font-weight: bold" class="mb-2">-assignment5</h6>
+								<p6>text</p6>								
+							</div>
 						</div>
-						<div class="assign-each">
-							<h6 id="three" style="font-weight: bold" class="mb-2">-assignment3</h6>
-							<p6>text</p6>						
-						</div>
-						<div class="assign-each">
-							<h6 id="four" style="font-weight: bold" class="mb-2">-assignment4</h6>
-							<p6>text</p6>								
-						</div>
-						<div class="assign-each">
-							<h6 id="five" style="font-weight: bold" class="mb-2">-assignment5</h6>
-							<p6>text</p6>				
-						</div>
-						<div class="assign-each">
-							<h6 id="five" style="font-weight: bold" class="mb-2">-assignment6</h6>
-							<p6>text</p6>				
-						</div>
-						<div class="assign-each">
-							<h6 id="five" style="font-weight: bold" class="mb-2">-assignment7</h6>
-							<p6>text</p6>				
-						</div>			
+						
 					</div>
 				</div>
 
