--- a/front-webApp/assignment_add.html
+++ b/front-webApp/assignment_add.html
@@ -34,10 +34,11 @@ star-input>.input.focus{outline:1px dotted #ddd;}
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
 	<!-- Costumize CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style_assignment_add.css">
+
+	<!-- fontawesome 으로 icon 사용하기 -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -65,7 +66,7 @@ star-input>.input.focus{outline:1px dotted #ddd;}
 						</div>
 						<div class= "col-md-2 col-xs-2 mt-1 mb-1">
 							<a  class="btn btn-default btn-icon" aria-label="Left Align" href="find_subject.html">
-								<span class="glyphicon glyphicon glyphicon-search" aria-hidden="true"></span>
+								<span class="fas fa-sistrix"></span>
 							</a>
 						</div>
 
