--- a/front-webApp/index.html
+++ b/front-webApp/index.html
@@ -1,95 +1,91 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="kr">
 <head>
-	<title>Login Page</title>
+   <title>Login Page</title>
 
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <!-- Required meta tags -->
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<!-- Customize CSS -->
-	<link rel="stylesheet" type="text/css" href="css/style_index.css">
+   <!-- Bootstrap CSS -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+   <!-- Customize CSS -->
+   <link rel="stylesheet" type="text/css" href="css/style_index.css">
 
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+   <!-- Optional JavaScript -->
+   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 
-
-<script type="text/javascript">
-	//id,pw 입력 확인 함수
-	$("#lgbtn").click(function(){
-			var param = 'stuId='+$('#id').val()+'&pw='+$('#pw').val();
-			$.ajax({
-				url:"localhost:8090/user/checkUser.json",
-				type : "GET",
-				data : param,
-				cache : false,
-				async : false,
-
-				success:function(data){
-					$('#id').empty();
-					$('#pw').empty();
-
-							if(data.result =="1"){ //로그인 성공
-								$mobile.changePage('./home.html');
-							}else{
-								alert('not user');
-							}
-				}
-			});
-		});
-</script>
-
 <body class="text-center">
-	<!-- Container -->
-	<div class="container">
-		<div class="row justify-content-md-center justify-content-xs-center">
-			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login-box ">
-				<h1 class="text-center wdi-red">Login</h1>
-				<hr>
-				<form>
-					<div class="form-row">
-						
-						<!-- input id, pw -->
-						<div class= "col-md-12 col-xs-12">
-							<input type="text" id="username" class="form-control form-control-lg flat-input" placeholder="username">
-						</div>
-						<div class= "col-md-12 col-xs-12">
-							<input type="password" id="password" class="form-control form-control-lg flat-input" placeholder="password" >
-						</div>
+<!-- Container -->
+<div class="container" id="content">
+   <div class="row justify-content-md-center justify-content-xs-center">
+      <div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login-box ">
+         <h1 class="text-center wdi-red">Login</h1>
+         <hr>
+         <form>
+            <div class="form-row">
 
-						<!-- remember user infomation - checkbox -->
-						<div class="checkbox col-md-12">
-							<label>
-								<input type="checkbox" value="remember-me">
-								Remember me
-							</label>
-						</div>
+               <!-- input id, pw -->
+               <div class= "col-md-12 col-xs-12">
+                  <input type="text" id="id" class="form-control form-control-lg flat-input" placeholder="username">
+               </div>
+               <div class= "col-md-12 col-xs-12">
+                  <input type="password" id="pw" class="form-control form-control-lg flat-input" placeholder="password" >
+               </div>
 
-						<!-- login/join/find pw button-->
-						<div class= "col-md-12 col-xs-12" >
-							<button type="submit" class="btn btn-lg btn-block btn-login" id="lgbtn">
-								LOGIN
-							</button>
-						</div>
-						<div class= "col-md-6 col-xs-6">
-							<a class="btn btn-lg btn-xs btn-block btn-join" href="join.html">
-								회원가입
-							</a>
-						</div>
-						<div class= "col-md-6 col-xs-6">
-							<button type="submit" class="btn btn-lg btn-xs btn-block btn-search">PW 찾기</button>
-						</div>
+               <!-- remember user infomation - checkbox -->
+               <div class="checkbox col-md-12">
+                  <label>
+                     <input type="checkbox" value="remember-me">
+                     Remember me
+                  </label>
+               </div>
 
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
+               <!-- login/join/find pw button-->
+               <div class= "col-md-12 col-xs-12" >
+                  <a id="submit">LOGIN</a>
+               </div>
+               <div class= "col-md-6 col-xs-6">
+                  <a class="btn btn-lg btn-xs btn-block btn-join" href="join.html">
+                     회원가입
+                  </a>
+               </div>
+               <div class= "col-md-6 col-xs-6">
+                  <button type="submit" class="btn btn-lg btn-xs btn-block btn-search">PW 찾기</button>
+               </div>
+
+            </div>
+         </form>
+      </div>
+   </div>
+</div>
+<script type="text/javascript">
+   $(document).ready(function(){
+      $('#submit').on('click',function(){
+         $.ajax({
+            url:"http://localhost:8090/user/checkUser.json",
+            type : "GET",
+            data : {'stuId':$('#id').val(), 'pw':$('#pw').val()},
+            success : function(result){
+               console.log(result);
+               if(result['result'] === '1'){ //로그인 성공
+                  location.href = "home.html";
+               }else{
+                  alert('로그인 실패');
+               }
+            },
+            error : function(){
+							alert('로그인 에러');
+            }
+         });
+      });
+   });
+</script>
 </body>
 </html>
