--- a/front-webApp/join.html
+++ b/front-webApp/join.html
@@ -16,37 +16,11 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
-
-<script type="text/javascript">
-		$("#joinbtn").click(function(){
-			var param ="&name="+$("#name").val()+"stuId="+$("#id").val()+"&semester="
-  +$("#semester").val()+"&pw="+$("#pw").val()+"&email="+$("#email").val();
-
-			$.ajax({
-				url:"localhost:8090/user/insertUser.json",
-				type : "GET",
-				data : param,
-				cache : false,
-				async : false,
-
-				success:function(data){
-					if(data.result =="1"){ //회원가입
-						$mobile.changePage('./index.html');
-					}else{
-						alert('다시 입력하세요');
-					}
-				}
-				error:function(){
-					alert('다시 입력하세요');
-				}
-			});
-		});
-</script>
-
 <body class="text-center">
 	<!-- Container -->
-	<div class="container">
+	<div class="container" id="content">
 		<div class="row justify-content-md-center justify-content-xs-center">
 			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login-box ">
 				<h1 class="text-center wdi-red">JOIN</h1>
@@ -59,7 +33,7 @@
 							<h6> ID </h6>
 						</div>
 						<div class= "col-md-9 col-xs-9">
-							<input type="text"  class="form-control form-control-lg flat-input">
+							<input type="text"  class="form-control form-control-lg flat-input" id="id">
 						</div>
 
 						<!--PW lable/input tag -->
@@ -67,7 +41,7 @@
 							<h6> PW </h6>
 						</div>
 						<div class= "col-md-9 col-xs-9">
-							<input type="text"  class="form-control form-control-lg flat-input" >
+							<input type="text"  class="form-control form-control-lg flat-input" id = "pw">
 						</div>
 
 						<!--NAME lable/input tag -->
@@ -75,20 +49,27 @@
 							<h6> NAME </h6>
 						</div>
 						<div class= "col-md-9 col-xs-9">
-							<input type="text"  class="form-control form-control-lg flat-input" >
+							<input type="text"  class="form-control form-control-lg flat-input" id ="name">
+						</div>
+
+						<div class= "col-md-3 col-xs-3 label">
+							<h6> EMAIL </h6>
+						</div>
+						<div class= "col-md-9 col-xs-9">
+							<input type="text"  class="form-control form-control-lg flat-input" id ="email">
 						</div>
 
 						<!--GRADE lable/Dropdow tag -->
 						<div class= "col-md-3 col-xs-3 label">
-							<h6> GRADE </h6>
+							<h6> YEAR </h6>
 						</div>
 						<div class="container col-md-3 col-xs-3 dropdown-grade">
-							<select class="form-control">
-								<option>1</option> 
-								<option>2</option> 
-								<option>3</option> 
+							<select class="form-control" id = "semester">
+								<option>1</option>
+								<option>2</option>
+								<option>3</option>
 								<option>4</option>
-							</select> 
+							</select>
 						</div>
 
 						<!--join/cancel button -->
@@ -106,5 +87,30 @@
 			</div>
 		</div>
 	</div>
+
+	<script type="text/javascript">
+	   $(document).ready(function(){
+	      $('#joinbtn').on('click',function(){
+	         $.ajax({
+	            url:"http://localhost:8090/user/insertUser.json",
+	            type : "GET",
+	            data : {'stuId':$('#id').val(), 'pw':$('#pw').val(),'name':$("#name").val(),
+							'semester':$("#semester").val(), 'email':$("#email").val()},
+	            success : function(result){
+	               console.log(result);
+	               if(result['result'] === '1'){ //회원가입 성공
+									 alert('회원가입 성공');
+	                  location.href = "index.html";
+	               }else{
+	                  alert('회원가입 실패');
+	               }
+	            },
+	            error : function(){
+								alert('회원가입 에러');
+	            }
+	         });
+	      });
+	   });
+	</script>
 </body>
 </html>
