--- a/phonegap_front_webApp/www/mypage.html
+++ b/phonegap_front_webApp/www/mypage.html
@@ -45,8 +45,8 @@
 					<div class="list-group">
 						<button class="btn p-1 btn-sm list-group-item" type="button">정보 수정</button>
 						<button class="btn p-1 btn-sm list-group-item" type="button">비밀번호 변경</button>
-						<button type="button" class="p-1 btn-sm list-group-item">알림 끄기</button>
-						<button type="button" class="p-1 btn-sm list-group-item">탈퇴</button>
+						<button class="btn p-1 btn-sm list-group-item" type="button">알림 끄기</button>
+						<button class="btn p-1 btn-sm list-group-item" type="button">탈퇴</button>
 					</div>
 				</div>
 
