--- a/phonegap_front_webApp/www/timetable_page.html
+++ b/phonegap_front_webApp/www/timetable_page.html
@@ -144,6 +144,95 @@
 
 							<!-- 검색하기 창 -->
 							<div class="collapse mt-1 form-add" id="collapseSearching">
+								
+								<div class="card card-body card-directly p-2">
+									<form class="commonForm">
+										<div class="form-group m-0">
+											<label for="subjectName" class="col-12 label">과목명</label>
+											<input type="text" class="form-control input" title="과목명" id="subjectName">
+										</div>
+										<div class="form-group m-0">
+											<label for="professorName" class="col-12 label" >교수명</label>
+											<input type="text" class="form-control input" title="교수명" id="professorName">
+										</div>
+										<div class="form-group m-0">
+											<label for="time" class="col-12 label">시간</label>
+											<div id="time" class="col-12 form-row">
+												<label class="mx-auto time-label">요일</label>
+												<div class="mx-auto">
+													<select id="day1" class="form-control-xs">
+														<option value="">요일</option> 
+														<option value="mon">mon</option> 
+														<option value="tue">tue</option> 
+														<option value="wen">wen</option> 
+														<option value="thu">thu</option> 
+														<option value="fri">fri</option> 
+													</select>
+													<select id="day2" class="form-control-xs">
+														<option value="">요일</option>
+														<option value="none">없음</option>  
+														<option value="mon">mon</option> 
+														<option value="tue">tue</option> 
+														<option value="wen">wen</option> 
+														<option value="thu">thu</option> 
+														<option value="fri">fri</option> 
+													</select>
+												</div>
+												<label class="mx-auto time-label">시작시간</label>
+												<div class="mx-auto">
+													<select id="sHour" class="form-control-xs">
+														<option value="">시</option> 
+														<option value="9">9</option> 
+														<option value="10">10</option> 
+														<option value="11">11</option> 
+														<option value="12">12</option> 
+														<option value="13">13</option> 
+														<option value="14">14</option> 
+														<option value="15">15</option> 
+														<option value="16">16</option>
+														<option value="17">17</option> 
+														<option value="18">18</option>
+													</select> 
+													<select id="sMinute" class="form-control-xs">
+														<option value="">분</option> 
+														<option value="00">00</option> 
+														<option value="30">30</option> 
+													</select> 				
+												</div>
+												<label class="mx-auto time-label">종료시간</label>
+												<div class="mx-auto">
+													<select id="eHour" class="form-control-xs">
+														<option value="">시</option> 
+														<option value="9">9</option> 
+														<option value="10">10</option> 
+														<option value="11">11</option> 
+														<option value="12">12</option> 
+														<option value="13">13</option> 
+														<option value="14">14</option> 
+														<option value="15">15</option> 
+														<option value="16">16</option>
+														<option value="17">17</option> 
+														<option value="18">18</option>
+													</select> 
+													<select id="eMinute" class="form-control-xs">
+														<option value="">분</option> 
+														<option value="00">00</option> 
+														<option value="30">30</option> 
+													</select> 		
+												</div>
+											</div>
+										</div>
+										<div class="form-group m-0">
+											<label for="place" class="col-12 label">장소</label>
+											<input type="text" class="form-control input" title="장소" id="place">
+										</div>
+									</form>
+									<div class="form-row mx-auto btn-submit">
+										<button type="button" id="btn-success" class="mx-auto col-5 btn btn-sm btn-addSub">추가</button>
+										<button type="button" id="btn-undo1" class="mx-auto col-5 btn btn-sm btn-addSub">취소</button>
+									</div>
+								</div>
+
 							</div>
 
 						</div>
@@ -171,6 +260,7 @@
 		$('#btn-undo2').on('click', function () {
 			$('.upperbarCollapse').trigger('click');
 			$('#add-by-directly').trigger('click');
+			$('#add-by-searching').trigger('click');
 		});
 
 		$('#btn-undo1').on('click', function () {
@@ -182,7 +272,7 @@
 	<script>
 		$('#btn-success').on('click', function () {
 
-			// if( !chkInput() ) return;
+			if( !chkInput() ) return;
 
 			var shour = document.getElementById("sHour");
 			var val_shour = shour.options[shour.selectedIndex].value;
@@ -262,7 +352,6 @@
 			$('.upperbarCollapse').trigger('click');
 		});
 	</script>
-
 
 	<!-- 테이블 클릭 시 수정 -->
 	<script>
